<resources>
    <string name="app_name">ResponsiveStories</string>
    <string name="kids_story">Kids Story</string>
    <string name="lovely">Children Education</string>
    <string name="enjoy">Enjoy time</string>

    <string name="lorem_s1">educational kids story build to teach children what is important to do</string>
    <string name="lorem_s2">Teaching Children what they need before the primary stage</string>
    <string name="lorem_s3">kids will enjoy in using the app</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <!-- Strings used for fragments for navigation -->

    <string name="previous">Previous</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fcm_message">FCM Message</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">email@mail.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Youtube Channel</string>
    <string name="menu_slideshow">Contact developer</string>
    <string name="facebook_page">Facebook Page</string>
    <string name="title_activity_entered_learen" translatable="false">EnteredLearenActivity</string>
    <string name="title_activity_offline_player" translatable="false">OfflinePlayerActivity</string>
    <string name="responsive_stories">Sunrise for kids</string>
    <string name="NoInternet">No Internet Connection</string>
    <string name="loading">Loading</string>
    <string name="animals">Animals</string>
    <string name="colors">Colors</string>
    <string name="shapes">Shapes</string>
    <string name="numbers">Numbers</string>
    <string name="alphabets">Alphabet</string>
    <string name="learn">learn</string>
    <string name="story">story</string>
    <string name="next">Next</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="msg_token_fmt" translatable="false">FCM registration Token: %s</string>
    <string name="apply">apply</string>
    <string name="finish">Finish</string>
    <string name="all_categories">all categories</string>
    <string name="all">all</string>
    <string name="are_you_sure_to_exit">Are you sure to Exit</string>
    <string name="exit_app">Exit</string>
    <string name="cancel">Rate</string>
    <string name="share_app_with_your_friend">share app with your friend</string>
    <string name="if_you_like_app_you_can_pay_cup_of_coffee_for_me">if you like app you can pay cup of coffee for me</string>
    <string name="donate_by_watch_vid">if you like app you can support me by watch video</string>
    <string name="bird">bird</string>
    <string name="update_now">update now</string>
    <string name="update_app">Update</string>
    <string name="dialog_update_available_message">new Update Available</string>
    <string name="later">Later</string>
    <string name="share_app">Hey Check out this Great app:</string>
    <string name="string_ok">ok</string>
    <string name="need_permission" translatable="false">need permission</string>
    <string name="desc_toast">descinding</string>
    <string name="CATEGORY_EMPTY">No Videos under Category</string>
    <string name="DOWNLOAD_FAILED">video Download failed</string>
    <string name="DOWNLOAD_FINISH">Downloading finished</string>
    <string name="VIDEO_REMOVED">Video Removed</string>
    <string name="START_DOWNLOAD">Download Video Started</string>
    <string name="CATEGORY_FETCH">Try to fetch Categories</string>
    <string name="VIDEOS_CHECK">Check for New Videos</string>
    <string name="ERROR_MSG">something goes wrong</string>
    <string name="NO_CONNECTION">No internet Connection Please Connect Internet</string>
    <string name="OK">okay</string>

</resources>